fix overflowing body on chrome mobile

--- a/src/elements/_html.scss
+++ b/src/elements/_html.scss
@@ -16,3 +16,7 @@ html {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+body {
+    overflow-y: hidden;
+}
